[package]
name = "themer"
version = "0.1.0"
authors = ["Jacob Salzberg <jsalzbergedu@yahoo.com>"]

[[bin]]
name = "themer"
path = "src/main.rs"

[dependencies]
html5ever = "0.12"
html5ever-atoms = "0.1"
orbclient = "0.3"
orbfont = "0.1"
orbimage = "0.1"
orbtk = "0.2"
ransid = "0.2"
rustls = "0.5"
tendril = "0.2"
url = "1.2"
userutils = { git = "https://github.com/redox-os/userutils.git" }
hyper-rustls = "0.3"
extra = { git = "https://github.com/redox-os/libextra.git" }
coreutils = { git = "https://github.com/redox-os/coreutils.git" }

[dependencies.hyper]
version = "0.10"
default-features = false

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
